# fyp_src_code

./: CMakeLists.txt  README.md  fyp_algo.cpp  fyp_algo.sln  fyp_algo.vcxproj  fyp_algo.vcxproj.filters  rewards.csv  uav.cpp  uav.h
include/mavsdk/plugins/mavlink_passthrough/mavlink/v2.0/common/: common.h  mavlink.h  version.h
include/mavsdk/plugins/mavlink_passthrough/mavlink/v2.0/minimal/: mavlink.h  minimal.h  version.h
lib/cmake/MAVSDK/: MAVSDKConfigVersion.cmake  MAVSDKTargets-release.cmake  MAVSDKTargets.cmake
saved_models/: cnn.xml  policyNetwork.xml
